[project]
name = "minirag"
version = "0.1.0"
description = "A simple, modular RAG system to help you understand the core concepts and implementation principles."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.14.1",
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minirag"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "ruff>=0.9",
]
